<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:stretchColumns="*">

    <TableRow android:minHeight="30dp" android:id="@+id/tipsHeader">
        <android.support.v7.widget.AppCompatTextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tip_date"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tip_employee"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tip_bill_id"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tip_bill_total"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tip_amount"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />
    </TableRow>

    <ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tipsTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:stretchColumns="*">
            </TableLayout>

            <Button
                android:visibility="gone"
                android:text="@string/load_more"
                android:layout_gravity="center_horizontal"
                android:id="@+id/loadMoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>

</TableLayout>